Fix video loading on mobile

--- a/assets/css/cover.css
+++ b/assets/css/cover.css
@@ -399,6 +399,15 @@ a.nav-link.btn-mf.dropdown-toggle.py-0 {
   left: 0px;
   width: 100%;
   height: 100%;
+  z-index: 10;
+}
+
+.auto-resize-yt-iframe > div > .youtube-lite-unmute-btn {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  z-index: 11; /* au-dessus de l'iframe */
 }
 
 /**
